    * Fixed errors with assigning added or deleted sequence at ends of complex mobile element insertions.
    * Fixed error predicting zero length deletions causing crash with certain reference sequences.
    * Improvements and updates to gdtools commands.
    * Changed the HTML display of read alignments to highlight differences from the reference.
    * Other bug fixes.

Version 0.23
    * Compiling in Cygwin should now be possible.
    * Fix for crash on single files containing multiple references when one that was not
      the last had a lowercase nucleotide in it.
    * Fix for incorrect amino acid annotations for some codon changes related to the use of
      alternative start codons and when there are multiple base substitutions in one codon.
    * Added DEVELOPER instruction file for compiling the repository version of code.

Version 0.22
    * Fixed crash due to change in output format in newer bowtie2 versions (≥2.0.4). 
      breseq should now produce consistent results for all versions (≥2.0.0-beta7).
    * Added -s,--junction-only-reference option to include reference sequences
      that can be part of a new junction, but are not otherwise processed for calling
      mutations. This option is useful if you want to find mobile elements that are not
      native to the main genome, e.g. the locations of transposons in a mutant strain, and
      have another reference sequence that contains those mobile elements.
    * Improved matching MC evidence to certain MOBs.
    * Removed duplicate -j command line option definition.
    * Updated bundled SAMtools to version 0.18.
    * Command line now prints versions and locations of external programs used by breseq.
    
Version 0.21
    * Fixed improperly failure of check for bowtie2 versions 2.0.0+.
    * Adjusted bowtie2 seed parameters to regain some degradation in sensitivity in
      short read data sets caused by previous choices.