@@ -1,7 +1,5 @@
-End users, please see the HTML documentation file:
-
+Please see the HTML documentation:
 documentation/index.html
 
 Developers (with the latest Google Code repository version), please see the file:
-
 DEVELOPER
