@@ -334,13 +334,13 @@ namespace breseq
 
     double mutation_log10_e_value_cutoff;                   // Default = 10
     double polymorphism_log10_e_value_cutoff;               // Default = mutation_log10_e_value_cutoff = 10
-		double polymorphism_bias_p_value_cutoff;                // Default = 0.05
+		double polymorphism_bias_p_value_cutoff;                // Default = 0.05 for mixed base | 0 (OFF) for polymorphism
 		double polymorphism_frequency_cutoff;                   // Default = 0.1 for mixed base | 0.0 for polymorphism
 		int32_t polymorphism_minimum_new_coverage_each_strand;  // Default = 1
 		uint32_t polymorphism_reject_homopolymer_length;        // Default = 0 (OFF)
 		bool no_indel_polymorphisms;                            // Default = false
-    double polymorphism_precision_decimal;                  // Default = 0.001 for mixed base | 0.0000000001 for polymorphism
-    uint32_t polymorphism_precision_places;                   // Default = 3 for mixed base | 10 for polymorphism
+    double polymorphism_precision_decimal;                  // Default = not used for mixed base | 0.0000000001 for polymorphism
+    uint32_t polymorphism_precision_places;                 // Default = 3 for mixed base | 10 for polymorphism
 
 		
 		//! Settings: Copy Number Variation
